tools/speedtest/speedtest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest
  template:
    metadata:
      labels:
        app: speedtest
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1 # A higher weight means a stronger preference
              preference:
                matchExpressions:
                  - key: networkSpeed
                    operator: In
                    values:
                      - "2.5G"
      containers:
        - name: speedtest
          image: openspeedtest/latest:v2.0.6
