tools/speedtest/speedtest-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest-route
  namespace: default # Where your application is deployed
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "speed.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io # Or traefik.containo.us
            kind: Middleware
            name: limit-request-body
      backendRefs:
        # Use backendRefs for Gateway API v1beta1
        - name: speedtest-ui
          port: 3000
